# statuspagers

./: .gitignore  Cargo.toml  config.toml.example  package-lock.json  package.json  tailwind.config.js
src/: config.rs  github.rs  main.rs  provider.rs  types.rs  utils.rs  writer.rs
templates/: base.html  detail.html  index.html
