[package]
name = "statuspagers"
version = "0.1.0"
authors = ["Markus Holtermann <info@markusholtermann.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
toml = "0.5"
tera = "1"
